# PomoHub

./: .env  .eslintrc.js  .gitignore  Dockerfile.serverjs  README.md  extractarray.py  index.html  package-lock.json  package.json  server.js
config/: cloudflared_config.yml  emojilist.js
docker/: Dockerfile  docker-compose.yml
python_client/: README.md  pyproject.toml  setup.py
python_client/src/pomodoro_tui/: __init__.py  app.py  config.ini
python_client/tests/: test.py
src/: App.js  AppTimer.js  ChatApp.js  index.css  server.js  utils.js
src/components/: Footer.js  FullScreen.js
src/components/memberdisplay/: MemberDisplay.js
src/components/settingscomponent/: SettingsComponent.js
src/components/tasks/: TaskInput.js  TaskList.js  Tasks.js
src/components/timer/: Timer.js  TimerButton.js  TimerSelector.js
src/custom_emojis/: emojilist.js
src/hooks/: useFullScreen.js
